--- a/Plat.html
+++ b/Plat.html
@@ -22,45 +22,43 @@
     </ul>
   </div>
 
-	<div class="page-content">
+	       <div class="container">
+              <div class="skills-list" id="hard-skills">
 
-			 <div class="container">
+                <div class="skill-block">
+                  <h2 >Soufflé au Fromage (x1)</h2>
+                  <h3 >1 oeuf</h3>
+                  <h3 >1/8e de lait</h3>
+                  <h3 >20g beurre</h3>
+                  <h3 >25g farine</h3>
+                  <h3 >30g gruyère ou vieux comté</h3>
+                  <h4>Faire la gelée un peu avant si possible pour qu’elle refroidisse un peu sans prendre! Mettre qq herbes dans le fond du moule pour faire joli, ciboulette. Ou autre </h4>
+                  <h4>1/Mettre dans le mixeur les jaunes d’œuf , les mixer à sec, les mettre dans le fond du moule et arroser de qq cuillers de gelée</h4>
+                  <h4>2/ mixer les blancs d’œuf puis ajouter 1 à 2  c à soupe et mayonnaise et 3/4 c à soupe de gelée. Petit coup de mixeur et mettre dans le moule</h4>
+                  <h4>3/ mixer le surime puis ajouter de la mayonnaise (2/3 c à soupe) et de la gelée, petit coup de mixeur et dans le plat!!
+                  Au froid 2/3 heures</h4>
+                  <h4>Voilà c’est hyper rapide, et ça jette! Ne pas mettre toute la gelée, cela fait trop, et la mayonnaise , selon ton goût aussi</h4>
+                </div>
 
-			    <div class="blocks">
-			        <div class="block-line">
-			            <div class="block">
-			 				<img src="images/beijing.jpg" class="index block-image"></a>
-			 			</div>
-			 		<div class="block block-text home-block">
-			 			<h3>China</h3>
-			 			<h4>It's a country in East of Asia and the world popoulous country in the world. China is the perfect balance between impressive cities such as Beijing and Shanghai in terms of modernity, economy and population, and empty countriside. This country is full of surprises for those willing to travel towards the Land of Sunrise.</h4>
-					</div>
-			 		</div>
-			 	</div>
+                <div class="skill-block">
+                  <h2 >Foie Gras au micro-onde</h2>
+                  <h3 >500g de foie</h3>
+                  <h3 >sel</h3>
+                  <h3 >1 cuillère à café</h3>
+                  <h3 >Poivre au moulin</h3>
+                  <h3 >Alcool: Cognac ou Armagnac</h3>
+                  <h4>A faire au moins 4/5 jours avant de le déguster, mais peut attendre 8/10 jours au frigo. </h4>
+                  <h4>La veille, Prendre un foie de bonne qualité, autour de 500g ( plus il est gros, plus de 600g, plus il va rendre de la graisse) Si on l’achète frais au rayon frais ( pas congelé) il faut pouvoir enfoncé un peu son doigt dedans. S’il est très dur, c’est qu’il est plein de graisse, qui durcit au froid, qu’il va rendre à la cuisson. </h4>
+                  <h4>Si il n’est pas éveiné, il faut retirer les veines principales, mettre à mariner la veille avec du sel, 1 cuillère à café légèrement bombée  ( 10g) et du poivre du moulin, un peu partout, au pif, et de l’alcool: Cognac ou  Armagnac pour moi, certains mettent du sauterne ou porto… au frigo</h4>
+                  <h4>Le lendemain, le sortir un frigo un peu à l’avance, qu’il se réchauffe un peu.Puis, l’emballer dans du film plastique alimentaire ( attention ils ne sont pas tous compatibles « cuisson, micro-onde), puis faire un boudin bien serré en mettant plusieurs couches et « dans les deux sens »</h4>
+                  <h4>Faire cuire au micro-onde: puissance maximum, 1 minute puis laisser reposer 1 mn, puis 2 fois 25/30 secondes, avec un temps de repos. Ces temps de repos permettent au film plastique de se dégonfler et d’éviter qu’il « explose » et que le gras se répande. Ensuite, au frigo… si il est très mou, il faut lui donner une forme ronde en emballant le tout (sans retirer le film plastique ! ) dans du papier aluminium.</h4>
+                </div>
 
-			    <div class="blocks">
-			        <div class="block-line">
-			 		<div class="block block-text home-block">
-			 			<h3>Japan</h3>
-			 			<h4>This island country from East Japan is one of the most modern worldwide. Mixing traditions and modernity you will be surprise along your trip. Our most appreciated trip is 9 days through Tokyo, Kyoto and Osaka</h4>
-					</div>
-					<div class="block">
-			 				<img src="images/tokyo.jpeg" class="index block-image"></a>
-			 		</div>
-			 		</div>
-			 	</div>
+              </div>
 
 
  </div>
-				<div id="piedpage" class = "card-sidebar navbar-icons">
-					<ul class = "list-inline">
-						<li>
-							<a href="https://www.youtube.com/watch?v=lJ87yD_8u3U">
-							<i class="fab fa-youtube"></i>
-							</a>
-						</li>
-					</ul>
-				</div>
+
 
   </body>
 
