--- a/Entree.html
+++ b/Entree.html
@@ -26,6 +26,11 @@
               <div class="skills-list" id="hard-skills">
 
                 <div class="skill-block">
+                  <ul>
+                    <li>Coffee</li>
+                    <li>Tea</li>
+                    <li>Milk</li>
+                  </ul>
                   <h2 >Couronne au Crabe</h2>
                   <h3 >500g de surimi</h3>
                   <h3 >6 oeufs durs</h3>
