--- a/Entree.html
+++ b/Entree.html
@@ -26,12 +26,17 @@
               <div class="skills-list" id="hard-skills">
 
                 <div class="skill-block">
-                  <ul>
+                  <h2 >Couronne au Crabe</h2>
+                  <h3 ><ul>
                     <li>Coffee</li>
                     <li>Tea</li>
                     <li>Milk</li>
-                  </ul>
-                  <h2 >Couronne au Crabe</h2>
+                  </ul></h3>
+                  <ul><h3 >
+                    <li>Coffee</li>
+                    <li>Tea</li>
+                    <li>Milk</li>
+                  </h3></ul>
                   <h3 >500g de surimi</h3>
                   <h3 >6 oeufs durs</h3>
                   <h3 >1 paquet de gelée magi</h3>
