--- a/Entree.html
+++ b/Entree.html
@@ -28,19 +28,11 @@
                 <div class="skill-block">
                   <h2 >Couronne au Crabe</h2>
                   <h3 ><ul>
-                    <li>Coffee</li>
-                    <li>Tea</li>
-                    <li>Milk</li>
+                    <li>500g de surimi</li>
+                    <li>6 oeufs durs</li>
+                    <li>1 paquet de gelée magi</li>
+                    <li>1 pot de mayonnaise</li>
                   </ul></h3>
-                  <ul><h3 >
-                    <li>Coffee</li>
-                    <li>Tea</li>
-                    <li>Milk</li>
-                  </h3></ul>
-                  <h3 >500g de surimi</h3>
-                  <h3 >6 oeufs durs</h3>
-                  <h3 >1 paquet de gelée magi</h3>
-                  <h3 >1 pot de mayonnaise</h3>
                   <h4>Faire la gelée un peu avant si possible pour qu’elle refroidisse un peu sans prendre! Mettre qq herbes dans le fond du moule pour faire joli, ciboulette. Ou autre </h4>
                   <h4>1/Mettre dans le mixeur les jaunes d’œuf , les mixer à sec, les mettre dans le fond du moule et arroser de qq cuillers de gelée</h4>
                   <h4>2/ mixer les blancs d’œuf puis ajouter 1 à 2  c à soupe et mayonnaise et 3/4 c à soupe de gelée. Petit coup de mixeur et mettre dans le moule</h4>
@@ -51,11 +43,12 @@
 
                 <div class="skill-block">
                   <h2 >Foie Gras au micro-onde</h2>
-                  <h3 >500g de foie</h3>
-                  <h3 >sel</h3>
-                  <h3 >1 cuillère à café</h3>
-                  <h3 >Poivre au moulin</h3>
-                  <h3 >Alcool: Cognac ou Armagnac</h3>
+                  <h3 ><ul>
+                    <li>500g de foie</li>
+                    <li>sel</li>
+                    <li>Poivre au moulin</li>
+                    <li>Alcool: Cognac ou Armagnac</li>
+                  </ul></h3>
                   <h4>A faire au moins 4/5 jours avant de le déguster, mais peut attendre 8/10 jours au frigo. </h4>
                   <h4>La veille, Prendre un foie de bonne qualité, autour de 500g ( plus il est gros, plus de 600g, plus il va rendre de la graisse) Si on l’achète frais au rayon frais ( pas congelé) il faut pouvoir enfoncé un peu son doigt dedans. S’il est très dur, c’est qu’il est plein de graisse, qui durcit au froid, qu’il va rendre à la cuisson. </h4>
                   <h4>Si il n’est pas éveiné, il faut retirer les veines principales, mettre à mariner la veille avec du sel, 1 cuillère à café légèrement bombée  ( 10g) et du poivre du moulin, un peu partout, au pif, et de l’alcool: Cognac ou  Armagnac pour moi, certains mettent du sauterne ou porto… au frigo</h4>
