--- a/Plat.html
+++ b/Plat.html
@@ -26,32 +26,169 @@
               <div class="skills-list" id="hard-skills">
 
                 <div class="skill-block">
-                  <h2 >Soufflé au Fromage (x1)</h2>
-                  <h3 >1 oeuf</h3>
-                  <h3 >1/8e de lait</h3>
-                  <h3 >20g beurre</h3>
-                  <h3 >25g farine</h3>
-                  <h3 >30g gruyère ou vieux comté</h3>
-                  <h4>Faire la gelée un peu avant si possible pour qu’elle refroidisse un peu sans prendre! Mettre qq herbes dans le fond du moule pour faire joli, ciboulette. Ou autre </h4>
-                  <h4>1/Mettre dans le mixeur les jaunes d’œuf , les mixer à sec, les mettre dans le fond du moule et arroser de qq cuillers de gelée</h4>
-                  <h4>2/ mixer les blancs d’œuf puis ajouter 1 à 2  c à soupe et mayonnaise et 3/4 c à soupe de gelée. Petit coup de mixeur et mettre dans le moule</h4>
-                  <h4>3/ mixer le surime puis ajouter de la mayonnaise (2/3 c à soupe) et de la gelée, petit coup de mixeur et dans le plat!!
-                  Au froid 2/3 heures</h4>
-                  <h4>Voilà c’est hyper rapide, et ça jette! Ne pas mettre toute la gelée, cela fait trop, et la mayonnaise , selon ton goût aussi</h4>
+                 <h2 >Boeuf Bourguignon (x6)</h2>
+                  <h3 ><ul>
+                    <li>1 kg de viande</li>
+                    <li>2 oignons</li>
+                    <li>3 carottes</li>
+                    <li>100g de lardons</li>
+                    <li>200g de champignons</li>
+                    <li>1 gousse d'ail</li>
+                    <li>2 c.s de farine</li>
+                    <li>30cl de vin rouge</li>
+                    <li>1 bouquet garni</li>
+                    <li>Sel & poivre</li>
+                    <li>Huile d'olive</li>
+                  </ul></h3>
+                  <h4>Couper la viande en morceaux, et la faire revenir dans le fond de la marmite.</h4>
+                  <h4>Faire revenir les oignons, l’ail et les carottes.</h4>
+                  <h4>Mélanger la farine avec le fond de sauce puis mouiller avec le vin, tout remettre dans la marmite et mettre de l’eau jusqu’à ce que tout soit recouvert.</h4>
+                  <h4>Laisser mijoter 2h30/3heure en remuant régulièrement, ajouter de l’eau si nécessaire.</h4>
+                  <h4>A coter, faire revenir les lardons puis ajouter les champignons. Quand tout est doré les ajouter au reste.</h4>
                 </div>
 
                 <div class="skill-block">
-                  <h2 >Foie Gras au micro-onde</h2>
-                  <h3 >500g de foie</h3>
-                  <h3 >sel</h3>
-                  <h3 >1 cuillère à café</h3>
-                  <h3 >Poivre au moulin</h3>
-                  <h3 >Alcool: Cognac ou Armagnac</h3>
-                  <h4>A faire au moins 4/5 jours avant de le déguster, mais peut attendre 8/10 jours au frigo. </h4>
-                  <h4>La veille, Prendre un foie de bonne qualité, autour de 500g ( plus il est gros, plus de 600g, plus il va rendre de la graisse) Si on l’achète frais au rayon frais ( pas congelé) il faut pouvoir enfoncé un peu son doigt dedans. S’il est très dur, c’est qu’il est plein de graisse, qui durcit au froid, qu’il va rendre à la cuisson. </h4>
-                  <h4>Si il n’est pas éveiné, il faut retirer les veines principales, mettre à mariner la veille avec du sel, 1 cuillère à café légèrement bombée  ( 10g) et du poivre du moulin, un peu partout, au pif, et de l’alcool: Cognac ou  Armagnac pour moi, certains mettent du sauterne ou porto… au frigo</h4>
-                  <h4>Le lendemain, le sortir un frigo un peu à l’avance, qu’il se réchauffe un peu.Puis, l’emballer dans du film plastique alimentaire ( attention ils ne sont pas tous compatibles « cuisson, micro-onde), puis faire un boudin bien serré en mettant plusieurs couches et « dans les deux sens »</h4>
-                  <h4>Faire cuire au micro-onde: puissance maximum, 1 minute puis laisser reposer 1 mn, puis 2 fois 25/30 secondes, avec un temps de repos. Ces temps de repos permettent au film plastique de se dégonfler et d’éviter qu’il « explose » et que le gras se répande. Ensuite, au frigo… si il est très mou, il faut lui donner une forme ronde en emballant le tout (sans retirer le film plastique ! ) dans du papier aluminium.</h4>
+                 <h2 >Blanquette de veau (par personne)</h2>
+                  <h3 ><ul>
+                    <li>200g veau (sauté et tendron)</li>
+                    <li>1 à 2 carottes</li>
+                    <li>1 à 2 oignons</li>
+                    <li>1 gousse d'ail</li>
+                    <li>champignons</li>
+                    <li>citron (pour la sauce)</li>
+                    <li>crème (pour la sauce)</li>
+                    <li>moutarde (pour la sauce)</li>
+                    <li>sel & poivre</li>
+                  </ul></h3>
+                  <h4>Mettre la viande dans une casserole, couvrir d’eau tiede/chaude, gros sel , poivre, bouillon cube, mettre à chauffer, ajouter carottes et oignons, laisser cuire tout doucement ( frémir) au moins 1h/1h30</h4>
+                  <h4>Pendant ce temps faire sauter les champignons dans une poêle.</h4>
+                  <h4>Ensuite faire la sauce: faire fondre du beurre dans une casserole ( pour la quantité, je fais au pif, je dirais 50/60g) mettre 1 à 2 cuillère de farine, laisser cuire un peu sans que cela roussisse puis mettre petit à petit du bouillon de cuisson jusqu’à la consistance désirée.</h4>
+                  <h4>Ajouter du jus de citron (1/2 et goûter pour le suite) , de la crème (Pas mal, c’est bon ! ) , un peu de moutarde et surtout goûter pour rectifier le sel et le poivre</h4>
+                  <h4>Rajouter les champignons et Annie mettait des petits bouts de cornichon !Servir avec plein de riz !</h4>
+                </div>
+
+                <div class="skill-block">
+                 <h2 >Cakes Salées</h2>
+                  <h3 ><ul>
+                    <li>150g de farine</li>
+                    <li>1 sachet de levure</li>
+                    <li>10 cl d'huile</li>
+                    <li>10 cl de lait</li>
+                    <li>3 oeufs</li>
+                    <li>100g de gruyères</li>
+                    <li>Sel & poivre & épices</li>
+                  </ul></h3>
+                  <h4>Four 180 chaleur tournante.</h4>
+                  <h4>Mélanger farine, levure, ajouter l’huile et le lait, puis les oeufs.</h4>
+                  <h4>Ajouter ensuite la garniture souhaité, sel/poivre et le gruyère</h4>
+                </div>
+
+                <div class="skill-block">
+                  <h2 >Catastrophe au jambon (x6)</h2>
+                  <h3 ><ul>
+                    <li>2 pâtes feuilletées</li>
+                    <li>6 tranches de jambon</li>
+                  </ul></h3>
+                  <h4>Four 180/190</h4>
+                  <h4>Béchamel (toute faite ou regarder plus loin la recette)</h4>
+                  <h4>Hacher le jambon, ajouter la béchamel et le fromage.</h4>
+                  <h4>Etaler une pâte feuillée, mettre la préparation au milieu, pas trop près du bord,
+                    recouvrir de l’autre pâte, faire qq petit trous pour laisser s’échapper la vapeur. </h4>
+                 <h4> Au four, 20/25mn à déguster avec une salade verte</h4>
+                </div>
+
+                <div class="skill-block">
+                 <h2 >Choux au fromage</h2>
+                  <h3 ><ul>
+                    <li>25cl d'eau</li>
+                    <li>100g de beurre</li>
+                    <li>150g de farine</li>
+                    <li>5 oeufs</li>
+                    <li>75g de gruère</li>
+                  </ul></h3>
+                  <h4>Faire bouillir l’eau et le beurre, mettre la farine d’un coup puis remuer jusqu’à ce que tout se détache de la casserole.</h4>
+                  <h4>Hors du feu, mélanger les oeufs un par un, assaisonner et ajouter le gruyère.</h4>
+                  <h4>Faire des petits tas et les faire cuire au four à 220°.</h4>
+                </div>
+
+                <div class="skill-block">
+                 <h2 >Fougasse</h2>
+                  <h3 ><ul>
+                    <li>500g de farine</li>
+                    <li>Pincée de sel</li>
+                    <li>Levure</li>
+                    <li>Filet d'huile d'olive</li>
+                    <li>20cl d'eau tiède (environ)</li>
+                  </ul></h3>
+                  <h4>Mélanger farine, sel et levure, puis ajouter l’huile d’olive et l’eau tiède (environ 20 cl).</h4>
+                  <h4>Laisser reposer 1h30 puis ajouter la garniture que l’on veut.</h4>
+                  <h4>Faire cuire dans un four chaud à 180°/200° pendant 20 minutes.</h4>
+                </div>
+
+                <div class="skill-block">
+                 <h2 >Gnocchi à la romaine (x4)</h2>
+                  <h3 ><ul>
+                    <li>125g de semoule fine</li>
+                    <li>50g de beurre</li>
+                    <li>1/2L de lait</li>
+                    <li>1 jaune d'oeuf</li>
+                    <li>75g de gruère</li>
+                    <li>Sel & poivre</li>
+                  </ul></h3>
+                  <h4>Faire bouillir lait + beurre + sel/poivre, ajouter la semoule en pluie et faire cuire doucement 5/10 min.</h4>
+                  <h4>Hors du feu mélanger avec le jaune d’œuf  et le gruyère, faire des petits tas et les faire griller au four 15 min.</h4>
+                </div>
+
+                <div class="skill-block">
+                  <h2 >Soufflé au Fromage (x1)</h2>
+                  <h3 ><ul>
+                    <li>1 oeuf</li>
+                    <li>1/8L de lait</li>
+                    <li>20g beurre</li>
+                    <li>25g farine</li>
+                    <li>30g gruyère ou vieux comté</li>
+                  </ul></h3>
+                  <h4>Four chaleur tournante 180 </h4>
+                  <h4>Faire une béchamel: faire  fondre le beurre, mettre la farine, faire cuire un peu sans que cela roussisse. ajouter d’un seul coup tout le lait froid, bien mélanger au fouet pour éviter les grumeaux, faire épaissir.</h4>
+                  <h4>Ajouter les jaunes d’œufs un à un en mélangeant rapidement puis les blancs montés en neige bien fermes et en dernier le fromage râpé.</h4>
+                  <h4>Faire cuire dans un plats beurré, 20/25 mn</h4>
+                </div>
+
+                <div class="skill-block">
+                 <h2 >Poulet au citron et aux épices</h2>
+                  <h3 ><ul>
+                    <li>Poulet prédécoupé</li>
+                    <li>3 citrons</li>
+                    <li>50 ml d'huile d'olive</li>
+                    <li>miel liquide</li>
+                    <li>Sel & poivre</li>
+                    <li>cumin</li>
+                    <li>piment d'espelette</li>
+                    <li>vanille</li>
+                  </ul></h3>
+                  <h4>Faire une sauce avec le jus de 3 citrons, 50 ml d’huile d’olive, du miel liquide, sel poivre, cumin ,piment d’espelette et si vous en avez de la vanille.</h4>
+                  <h4>Faire mariner le poulet dans la sauce avec 2 oignons coupés en morceaux et les citrons pressés coupés en 4.</h4>
+                  <h4>Faire cuire au four 45 à 55 minutes et servir avec du riz.</h4>
+                </div>
+
+                <div class="skill-block">
+                 <h2 >Porc au Curry de mamie Laure (x6)</h2>
+                  <h3 ><ul>
+                    <li>2 filets mignons de porc</li>
+                    <li>3 oignons</li>
+                    <li>6 carottes</li>
+                    <li>1 poivron rouge épluché</li>
+                    <li>2 tomates</li>
+                    <li>Curry</li>
+                    <li>Cumin</li>
+                    <li>Sel & poivre</li>
+                    <li>1 tasse de bouillon de poule</li>
+                    <li>Crème ou lait de coco</li>
+                  </ul></h3>
+                  <h4>Raper gros les carottes, émincer les oignons , couper les tomates et le poivron en petits dés.</h4>
+                  <h4>Faire revenir les oignons dans un peu d’huile d’olive puis les filets mignons en tranche avec les oignons,</h4>
+                  <h4>Rajouter carottes, tomates, poivron, bouillon, sel, poivre, épices. Faire mijoter 30mn environ, puis rajouter la crème ou le lait de coco. Ajuster la sauce. Lol</h4>
+                  <h4>Servir avec pâtes fraîches, riz ou couscous.</h4>
                 </div>
 
               </div>
