--- a/Dessert.html
+++ b/Dessert.html
@@ -25,7 +25,8 @@
          <div class="container">
               <div class="skills-list" id="hard-skills">
 
-                <div class="skill-block">Buche de Noel</h2>
+                <div class="skill-block">
+                  <h2>Buche de Noel</h2>
                   <h3 ><ul>
                     <li>4 oeufs (génoise)</li>
                     <li>1 tasse à the de sucre en poudre ( à peu près 200g) (génoise)</li>
@@ -46,7 +47,8 @@
                   <h4>Glacage: 200g de chocolat,  faire fondre avec un peu de café, ajouter un peu de sucre glace. Etaler à chaud</h4>
                 </div>
 
-                <div class="skill-block">Cannelés</h2>
+                <div class="skill-block">
+                <h2>Cannelés</h2>
                   <h3 ><ul>
                     <li>50cl lait</li>
                     <li>25g beurre</li>
@@ -64,7 +66,8 @@
                   <h4>1/3 doses.  23/24 petits canneles.    1/2 dose. 8 gros cannelés. À peu près…..</h4>
                 </div>
 
-                <div class="skill-block">Cheesecake</h2>
+                <div class="skill-block">
+                <h2>Cheesecake</h2>
                   <h3 ><ul>
                     <li>450g Saint Moret (Crème)</li>
                     <li>250g de fromage blanc (Crème)</li>
@@ -82,7 +85,8 @@
                   <h4>Faire cuire la croute 10 minutes, puis faire cuire 30 minutes avec la crème.</h4>
                 </div>
 
-                <div class="skill-block">Crème Renversée</h2>
+                <div class="skill-block">
+                <h2>Crème Renversée</h2>
                   <h3 ><ul>
                     <li>1L de lait entier</li>
                     <li>6 oeufs</li>
@@ -95,7 +99,8 @@
                   <h4> Mettre du caramel dans le fond du moule , verser la préparation à travers une passoire. Faire prendre au bain marie au four, (30/40mn..) </h4>
                 </div>
 
-                <div class="skill-block">Financiers</h2>
+                <div class="skill-block">
+                <h2>Financiers</h2>
                   <h3 ><ul>
                     <li>2 oeufs entiers</li>
                     <li>125g de sucre en poudre</li>
@@ -106,7 +111,8 @@
                   <h4>Four à 190°.  10/12 mn</h4>
                 </div>
 
-                <div class="skill-block">Flan Parisien de Christophe Michalak (x8 - moule 23cm diamètre)</h2>
+                <div class="skill-block">
+                <h2>Flan Parisien de Christophe Michalak (x8 - moule 23cm diamètre)</h2>
                   <h3 ><ul>
                     <li>125g de sucre fin</li>
                     <li>50g de maizena</li>
@@ -123,7 +129,8 @@
                   <h4>Le flan n’est pas très épais (mon moule est grand) et c’est tant mieux, on n’a pas trop de scrupule à se resservir!</h4>
                 </div>
 
-                <div class="skill-block">Gâteau au chocolat</h2>
+                <div class="skill-block">
+                <h2>Gâteau au chocolat</h2>
                   <h3 ><ul>
                     <li>200g de chocolat</li>
                     <li>200g de beurre</li>
@@ -137,7 +144,8 @@
                   <h4>Faire cuire 30 min au four à 180°.</h4>
                 </div>
 
-                <div class="skill-block">Gâteau aux noisettes (x6)</h2>
+                <div class="skill-block">
+                <h2>Gâteau aux noisettes (x6)</h2>
                   <h3 ><ul>
                     <li>125g d'amandes en poudre</li>
                     <li>125 g de noisettes en poudre</li>
@@ -150,7 +158,8 @@
                   <h4>Une fois froid, glacer ce gâteau avec un mélange épais de sucre glace et de jus de citron.</h4>
                 </div>
 
-                <div class="skill-block">Gâteau au Yaourt</h2>
+                <div class="skill-block">
+                <h2>Gâteau au Yaourt</h2>
                   <h3 ><ul>
                     <li>1 pot de Yaourt</li>
                     <li>3 oeufs entiers</li>
@@ -164,7 +173,8 @@
                   <h4>Tout mélanger dans l’ordre. et faire cuire 30/35 mn</h4>
                 </div>
 
-                <div class="skill-block">Mousse au chocolat</h2>
+                <div class="skill-block">
+                <h2>Mousse au chocolat</h2>
                   <h3 ><ul>
                     <li>200g chocolat</li>
                     <li>6 oeufs</li>
@@ -175,7 +185,8 @@
                   <h4>Mettre au frigidaire au moins 2 heures</h4>
                 </div>
 
-                <div class="skill-block">Muffins</h2>
+                <div class="skill-block">
+                <h2>Muffins</h2>
                   <h3 ><ul>
                     <li>50g beurre salé</li>
                     <li>8 c.s. de crème</li>
@@ -191,7 +202,8 @@
                   <h4>Faire cuire au four 10/15 minutes</h4>
                 </div>
 
-                <div class="skill-block">Tarte aux Amandes Effilées</h2>
+                <div class="skill-block">
+                <h2>Tarte aux Amandes Effilées</h2>
                   <h3 ><ul>
                     <li>Pâte à tarte</li>
                     <li>125g d'amandes effilées</li>
