--- a/Dessert.html
+++ b/Dessert.html
@@ -23,9 +23,9 @@
   </div>
 
          <div class="container">
-              <div class="skills-list" id="hard-skills">
+              <div class="skills-list" id="Desserts">
 
-                <div class="skill-block">
+                <div class="skill-block" id="Buche_Noel">
                   <h2>Buche de Noel</h2>
                   <h3 ><ul>
                     <li>4 oeufs (génoise)</li>
@@ -47,7 +47,7 @@
                   <h4>Glacage: 200g de chocolat,  faire fondre avec un peu de café, ajouter un peu de sucre glace. Etaler à chaud</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Canneles">
                 <h2>Cannelés</h2>
                   <h3 ><ul>
                     <li>50cl lait</li>
@@ -66,7 +66,7 @@
                   <h4>1/3 doses.  23/24 petits canneles.    1/2 dose. 8 gros cannelés. À peu près…..</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Cheesecake">
                 <h2>Cheesecake</h2>
                   <h3 ><ul>
                     <li>450g Saint Moret (Crème)</li>
@@ -85,7 +85,7 @@
                   <h4>Faire cuire la croute 10 minutes, puis faire cuire 30 minutes avec la crème.</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Creme_Renversee">
                 <h2>Crème Renversée</h2>
                   <h3 ><ul>
                     <li>1L de lait entier</li>
@@ -99,7 +99,7 @@
                   <h4> Mettre du caramel dans le fond du moule , verser la préparation à travers une passoire. Faire prendre au bain marie au four, (30/40mn..) </h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Financiers">
                 <h2>Financiers</h2>
                   <h3 ><ul>
                     <li>2 oeufs entiers</li>
@@ -111,7 +111,7 @@
                   <h4>Four à 190°.  10/12 mn</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Flan_Michalak">
                 <h2>Flan Parisien de Christophe Michalak (x8 - moule 23cm diamètre)</h2>
                   <h3 ><ul>
                     <li>125g de sucre fin</li>
@@ -129,7 +129,7 @@
                   <h4>Le flan n’est pas très épais (mon moule est grand) et c’est tant mieux, on n’a pas trop de scrupule à se resservir!</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Gateau_Chocolat">
                 <h2>Gâteau au chocolat</h2>
                   <h3 ><ul>
                     <li>200g de chocolat</li>
@@ -144,7 +144,7 @@
                   <h4>Faire cuire 30 min au four à 180°.</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Gateau_Noisettes">
                 <h2>Gâteau aux noisettes (x6)</h2>
                   <h3 ><ul>
                     <li>125g d'amandes en poudre</li>
@@ -158,7 +158,7 @@
                   <h4>Une fois froid, glacer ce gâteau avec un mélange épais de sucre glace et de jus de citron.</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Gateau_Yaourt">
                 <h2>Gâteau au Yaourt</h2>
                   <h3 ><ul>
                     <li>1 pot de Yaourt</li>
@@ -173,7 +173,7 @@
                   <h4>Tout mélanger dans l’ordre. et faire cuire 30/35 mn</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Mousse_Chocolat">
                 <h2>Mousse au chocolat</h2>
                   <h3 ><ul>
                     <li>200g chocolat</li>
@@ -185,7 +185,7 @@
                   <h4>Mettre au frigidaire au moins 2 heures</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Muffins">
                 <h2>Muffins</h2>
                   <h3 ><ul>
                     <li>50g beurre salé</li>
@@ -202,7 +202,7 @@
                   <h4>Faire cuire au four 10/15 minutes</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Tarte_Amandes">
                 <h2>Tarte aux Amandes Effilées</h2>
                   <h3 ><ul>
                     <li>Pâte à tarte</li>
