--- a/Entree.html
+++ b/Entree.html
@@ -23,9 +23,9 @@
   </div>
 
        <div class="container">
-              <div class="skills-list" id="hard-skills">
+              <div class="skills-list" id="Entree">
 
-                <div class="skill-block">
+                <div class="skill-block" id="Couronne_Crabe">
                   <h2 >Couronne au Crabe</h2>
                   <h3 ><ul>
                     <li>500g de surimi</li>
@@ -41,7 +41,7 @@
                   <h4>Voilà c’est hyper rapide, et ça jette! Ne pas mettre toute la gelée, cela fait trop, et la mayonnaise , selon ton goût aussi</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Foie_Gras_Micro_Onde">
                   <h2 >Foie Gras au micro-onde</h2>
                   <h3 ><ul>
                     <li>500g de foie</li>
