--- a/Plat.html
+++ b/Plat.html
@@ -23,9 +23,29 @@
   </div>
 
 	       <div class="container">
-              <div class="skills-list" id="hard-skills">
+              <div class="skills-list" id="Plats">
 
-                <div class="skill-block">
+                <div class="skill-block" id="Blanquette_Veau">
+                 <h2 >Blanquette de veau (par personne)</h2>
+                  <h3 ><ul>
+                    <li>200g veau (sauté et tendron)</li>
+                    <li>1 à 2 carottes</li>
+                    <li>1 à 2 oignons</li>
+                    <li>1 gousse d'ail</li>
+                    <li>champignons</li>
+                    <li>citron (pour la sauce)</li>
+                    <li>crème (pour la sauce)</li>
+                    <li>moutarde (pour la sauce)</li>
+                    <li>sel & poivre</li>
+                  </ul></h3>
+                  <h4>Mettre la viande dans une casserole, couvrir d’eau tiede/chaude, gros sel , poivre, bouillon cube, mettre à chauffer, ajouter carottes et oignons, laisser cuire tout doucement ( frémir) au moins 1h/1h30</h4>
+                  <h4>Pendant ce temps faire sauter les champignons dans une poêle.</h4>
+                  <h4>Ensuite faire la sauce: faire fondre du beurre dans une casserole ( pour la quantité, je fais au pif, je dirais 50/60g) mettre 1 à 2 cuillère de farine, laisser cuire un peu sans que cela roussisse puis mettre petit à petit du bouillon de cuisson jusqu’à la consistance désirée.</h4>
+                  <h4>Ajouter du jus de citron (1/2 et goûter pour le suite) , de la crème (Pas mal, c’est bon ! ) , un peu de moutarde et surtout goûter pour rectifier le sel et le poivre</h4>
+                  <h4>Rajouter les champignons et Annie mettait des petits bouts de cornichon !Servir avec plein de riz !</h4>
+                </div>
+
+                <div class="skill-block" id="Boeuf_Bourguignon">
                  <h2 >Boeuf Bourguignon (x6)</h2>
                   <h3 ><ul>
                     <li>1 kg de viande</li>
@@ -47,27 +67,7 @@
                   <h4>A coter, faire revenir les lardons puis ajouter les champignons. Quand tout est doré les ajouter au reste.</h4>
                 </div>
 
-                <div class="skill-block">
-                 <h2 >Blanquette de veau (par personne)</h2>
-                  <h3 ><ul>
-                    <li>200g veau (sauté et tendron)</li>
-                    <li>1 à 2 carottes</li>
-                    <li>1 à 2 oignons</li>
-                    <li>1 gousse d'ail</li>
-                    <li>champignons</li>
-                    <li>citron (pour la sauce)</li>
-                    <li>crème (pour la sauce)</li>
-                    <li>moutarde (pour la sauce)</li>
-                    <li>sel & poivre</li>
-                  </ul></h3>
-                  <h4>Mettre la viande dans une casserole, couvrir d’eau tiede/chaude, gros sel , poivre, bouillon cube, mettre à chauffer, ajouter carottes et oignons, laisser cuire tout doucement ( frémir) au moins 1h/1h30</h4>
-                  <h4>Pendant ce temps faire sauter les champignons dans une poêle.</h4>
-                  <h4>Ensuite faire la sauce: faire fondre du beurre dans une casserole ( pour la quantité, je fais au pif, je dirais 50/60g) mettre 1 à 2 cuillère de farine, laisser cuire un peu sans que cela roussisse puis mettre petit à petit du bouillon de cuisson jusqu’à la consistance désirée.</h4>
-                  <h4>Ajouter du jus de citron (1/2 et goûter pour le suite) , de la crème (Pas mal, c’est bon ! ) , un peu de moutarde et surtout goûter pour rectifier le sel et le poivre</h4>
-                  <h4>Rajouter les champignons et Annie mettait des petits bouts de cornichon !Servir avec plein de riz !</h4>
-                </div>
-
-                <div class="skill-block">
+                <div class="skill-block" id="Cakes_Salees">
                  <h2 >Cakes Salées</h2>
                   <h3 ><ul>
                     <li>150g de farine</li>
@@ -83,7 +83,7 @@
                   <h4>Ajouter ensuite la garniture souhaité, sel/poivre et le gruyère</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Catastrophe_Jambon">
                   <h2 >Catastrophe au jambon (x6)</h2>
                   <h3 ><ul>
                     <li>2 pâtes feuilletées</li>
@@ -97,7 +97,7 @@
                  <h4> Au four, 20/25mn à déguster avec une salade verte</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Choux_Fromage">
                  <h2 >Choux au fromage</h2>
                   <h3 ><ul>
                     <li>25cl d'eau</li>
@@ -111,7 +111,7 @@
                   <h4>Faire des petits tas et les faire cuire au four à 220°.</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Fougasse">
                  <h2 >Fougasse</h2>
                   <h3 ><ul>
                     <li>500g de farine</li>
@@ -125,7 +125,7 @@
                   <h4>Faire cuire dans un four chaud à 180°/200° pendant 20 minutes.</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Gnocchi_romaine">
                  <h2 >Gnocchi à la romaine (x4)</h2>
                   <h3 ><ul>
                     <li>125g de semoule fine</li>
@@ -139,7 +139,7 @@
                   <h4>Hors du feu mélanger avec le jaune d’œuf  et le gruyère, faire des petits tas et les faire griller au four 15 min.</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Souffle_Fromage">
                   <h2 >Soufflé au Fromage (x1)</h2>
                   <h3 ><ul>
                     <li>1 oeuf</li>
@@ -154,7 +154,7 @@
                   <h4>Faire cuire dans un plats beurré, 20/25 mn</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Poulet_citron_epices">
                  <h2 >Poulet au citron et aux épices</h2>
                   <h3 ><ul>
                     <li>Poulet prédécoupé</li>
@@ -171,7 +171,7 @@
                   <h4>Faire cuire au four 45 à 55 minutes et servir avec du riz.</h4>
                 </div>
 
-                <div class="skill-block">
+                <div class="skill-block" id="Porc_Curry">
                  <h2 >Porc au Curry de mamie Laure (x6)</h2>
                   <h3 ><ul>
                     <li>2 filets mignons de porc</li>
