--- a/index.html
+++ b/index.html
@@ -24,36 +24,25 @@
   </div>
 
 
-	<div class="page-content">
+       <div class="container">
+              <div class="skills-list" id="Entree">
 
-			 <div class="container">
+                <div class="skill-block" id="Couronne_Crabe">
+                  <h2><a href="#Entree">Entrées</a></h2>
+                  <h3><ul>
+                    <li><a href="#Couronne_Crabe">Couronne de Crabe</a></li>
+                    <li><a href="#Foie_Gras_Micro_Onde">Foie Gras au Micro-Onde</a></li>
+                  </ul></h3>
+                </div>
 
-			    <div class="blocks">
-			        <div class="block-line">
-			            <div class="block">
-			 				<img src="images/morocco.jpg" class="index block-image"></a>
-			 			</div>
-			 		<div class="block block-text home-block">
-			 			<h3>Discover one of the most diverse continent</h3>
-			 			<h4>With more than 54 countries, Africa is one of the most diverse and impressive continents. Let's discover a glimpse of the countries.</h4> <a href="Africa.html">
-							<button type="button" class = "btn-index-right">Africa</button></a>
-					</div>
-			 		</div>
-			 	</div>
+                  <h2><a href="#Entree">Entrées</a></h2>
+                  <h3><ul>
+                    <li><a href="#Couronne_Crabe">Couronne de Crabe</a></li>
+                    <li><a href="#Foie_Gras_Micro_Onde">Foie Gras au Micro-Onde</a></li>
+                  </ul></h3>
+                </div>
 
-			    <div class="blocks">
-			        <div class="block-line">
-			 		<div class="block block-text home-block">
-			 			<h3>Empowering countries cross by the land of the rising sun</h3>
-			 			<h4>From the temples of myanmar towards the lake of thailands or the soldiers of China, get a glimpse of this vast continent.</h4> <a href="Asia.html">
-							<button type="button" class = "btn-index-left">Asia</button></a>
-					</div>
-					<div class="block">
-			 				<img src="images/tokyo.jpeg" class="index block-image"></a>
-			 		</div>
-			 		</div>
-			 	</div>
-
+              </div>
 
 
  </div>
