--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                   </ul></h3>
                 </div>
 
+              <div class="skills-list" id="Entree">
+
+                <div class="skill-block" id="Couronne_Crabe">
                   <h2><a href="#Entree">Entrées</a></h2>
                   <h3><ul>
                     <li><a href="#Couronne_Crabe">Couronne de Crabe</a></li>
