--- a/Entree.html
+++ b/Entree.html
@@ -23,10 +23,10 @@
   </div>
 
        <div class="container">
-              <div class="skills-list" id="Entree">
+              <div class="skills-list" >
 
-                <div class="skill-block" id="Couronne_Crabe">
-                  <h2 >Couronne au Crabe</h2>
+                <div class="skill-block">
+                  <h2 id="Couronne_Crabe" > Couronne au Crabe </h2>
                   <h3 ><ul>
                     <li>500g de surimi</li>
                     <li>6 oeufs durs</li>
@@ -41,8 +41,8 @@
                   <h4>Voilà c’est hyper rapide, et ça jette! Ne pas mettre toute la gelée, cela fait trop, et la mayonnaise , selon ton goût aussi</h4>
                 </div>
 
-                <div class="skill-block" id="Foie_Gras_Micro_Onde">
-                  <h2 >Foie Gras au micro-onde</h2>
+                <div class="skill-block" ></a>
+                  <h2 id="Foie_Gras_Micro_Onde">Foie Gras au micro-onde </h2>
                   <h3 ><ul>
                     <li>500g de foie</li>
                     <li>sel</li>
