--- a/Plat.html
+++ b/Plat.html
@@ -23,10 +23,10 @@
   </div>
 
 	       <div class="container">
-              <div class="skills-list" id="Plats">
+              <div class="skills-list">
 
-                <div class="skill-block" id="Blanquette_Veau">
-                 <h2 >Blanquette de veau (par personne)</h2>
+                <div class="skill-block" >
+                 <h2 id="Blanquette_Veau">Blanquette de veau (par personne)</h2>
                   <h3 ><ul>
                     <li>200g veau (sauté et tendron)</li>
                     <li>1 à 2 carottes</li>
@@ -45,8 +45,8 @@
                   <h4>Rajouter les champignons et Annie mettait des petits bouts de cornichon !Servir avec plein de riz !</h4>
                 </div>
 
-                <div class="skill-block" id="Boeuf_Bourguignon">
-                 <h2 >Boeuf Bourguignon (x6)</h2>
+                <div class="skill-block" >
+                 <h2 id="Boeuf_Bourguignon">Boeuf Bourguignon (x6)</h2>
                   <h3 ><ul>
                     <li>1 kg de viande</li>
                     <li>2 oignons</li>
@@ -67,8 +67,8 @@
                   <h4>A coter, faire revenir les lardons puis ajouter les champignons. Quand tout est doré les ajouter au reste.</h4>
                 </div>
 
-                <div class="skill-block" id="Cakes_Salees">
-                 <h2 >Cakes Salées</h2>
+                <div class="skill-block" >
+                 <h2 id="Cakes_Salees">Cakes Salées</h2>
                   <h3 ><ul>
                     <li>150g de farine</li>
                     <li>1 sachet de levure</li>
@@ -83,8 +83,8 @@
                   <h4>Ajouter ensuite la garniture souhaité, sel/poivre et le gruyère</h4>
                 </div>
 
-                <div class="skill-block" id="Catastrophe_Jambon">
-                  <h2 >Catastrophe au jambon (x6)</h2>
+                <div class="skill-block" >
+                  <h2 id="Catastrophe_Jambon">Catastrophe au jambon (x6)</h2>
                   <h3 ><ul>
                     <li>2 pâtes feuilletées</li>
                     <li>6 tranches de jambon</li>
@@ -97,8 +97,8 @@
                  <h4> Au four, 20/25mn à déguster avec une salade verte</h4>
                 </div>
 
-                <div class="skill-block" id="Choux_Fromage">
-                 <h2 >Choux au fromage</h2>
+                <div class="skill-block" >
+                 <h2 id="Choux_Fromage">Choux au fromage</h2>
                   <h3 ><ul>
                     <li>25cl d'eau</li>
                     <li>100g de beurre</li>
@@ -111,8 +111,8 @@
                   <h4>Faire des petits tas et les faire cuire au four à 220°.</h4>
                 </div>
 
-                <div class="skill-block" id="Fougasse">
-                 <h2 >Fougasse</h2>
+                <div class="skill-block" >
+                 <h2 id="Fougasse">Fougasse</h2>
                   <h3 ><ul>
                     <li>500g de farine</li>
                     <li>Pincée de sel</li>
@@ -125,8 +125,8 @@
                   <h4>Faire cuire dans un four chaud à 180°/200° pendant 20 minutes.</h4>
                 </div>
 
-                <div class="skill-block" id="Gnocchi_romaine">
-                 <h2 >Gnocchi à la romaine (x4)</h2>
+                <div class="skill-block">
+                 <h2  id="Gnocchi_romaine">Gnocchi à la romaine (x4)</h2>
                   <h3 ><ul>
                     <li>125g de semoule fine</li>
                     <li>50g de beurre</li>
@@ -139,8 +139,8 @@
                   <h4>Hors du feu mélanger avec le jaune d’œuf  et le gruyère, faire des petits tas et les faire griller au four 15 min.</h4>
                 </div>
 
-                <div class="skill-block" id="Souffle_Fromage">
-                  <h2 >Soufflé au Fromage (x1)</h2>
+                <div class="skill-block" >
+                  <h2 id="Souffle_Fromage">Soufflé au Fromage (x1)</h2>
                   <h3 ><ul>
                     <li>1 oeuf</li>
                     <li>1/8L de lait</li>
@@ -154,8 +154,8 @@
                   <h4>Faire cuire dans un plats beurré, 20/25 mn</h4>
                 </div>
 
-                <div class="skill-block" id="Poulet_citron_epices">
-                 <h2 >Poulet au citron et aux épices</h2>
+                <div class="skill-block" >
+                 <h2 id="Poulet_citron_epices">Poulet au citron et aux épices</h2>
                   <h3 ><ul>
                     <li>Poulet prédécoupé</li>
                     <li>3 citrons</li>
@@ -171,8 +171,8 @@
                   <h4>Faire cuire au four 45 à 55 minutes et servir avec du riz.</h4>
                 </div>
 
-                <div class="skill-block" id="Porc_Curry">
-                 <h2 >Porc au Curry de mamie Laure (x6)</h2>
+                <div class="skill-block" >
+                 <h2 id="Porc_Curry">Porc au Curry de mamie Laure (x6)</h2>
                   <h3 ><ul>
                     <li>2 filets mignons de porc</li>
                     <li>3 oignons</li>
