--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 
   <body >
 
-    <header>
-      <h1><a class="header-title" href="index.html">Recettes familiales</h1></a>
-    </header>
+    <div class="banner-index">
+    <div class="container">
+      <div class="bordure"></div>
+      <h1>Recettes Familiales: Font Réaulx & co</h1>
+      <div class="bordure"></div>
+    </div>
+  </div>
 
   <div class="card-sidebar navbar-icons">
     <ul>
@@ -24,24 +28,48 @@
   </div>
 
 
-       <div class="container">
-              <div class="skills-list" id="Entree">
+       <div class="container_index">
+              <div class="skills-list" >
 
-                <div class="skill-block" id="Couronne_Crabe">
-                  <h2><a href="#Entree">Entrées</a></h2>
+                <div class="skill-block">
+                  <h2><a href="Entree.html">Entrées</a></h2>
                   <h3><ul>
-                    <li><a href="#Couronne_Crabe">Couronne de Crabe</a></li>
-                    <li><a href="#Foie_Gras_Micro_Onde">Foie Gras au Micro-Onde</a></li>
+                    <li><a href="Entree.html#Couronne_Crabe">Couronne de Crabe</a></li>
+                    <li><a href="Entree.html#Foie_Gras_Micro_Onde">Foie Gras au Micro-Onde</a></li>
                   </ul></h3>
                 </div>
 
-              <div class="skills-list" id="Entree">
-
-                <div class="skill-block" id="Couronne_Crabe">
-                  <h2><a href="#Entree">Entrées</a></h2>
+                <div class="skill-block">
+                  <h2><a href="Plat.html">Plats</a></h2>
                   <h3><ul>
-                    <li><a href="#Couronne_Crabe">Couronne de Crabe</a></li>
-                    <li><a href="#Foie_Gras_Micro_Onde">Foie Gras au Micro-Onde</a></li>
+                    <li><a href="Plat.html#Blanquette_Veau">Blanquette de Veau</a></li>
+                    <li><a href="Plat.html#Boeuf_Bourguignon">Boeuf Bourguignon</a></li>
+                    <li><a href="Plat.html#Cakes_Salees">Cakes Salées</a></li>
+                    <li><a href="Plat.html#Catastrophe_Jambon">Catastrophe au jambon</a></li>
+                    <li><a href="Plat.html#Choux_Fromage">Choux au Fromage</a></li>
+                    <li><a href="Plat.html#Fougasse">Fougasse</a></li>
+                    <li><a href="Plat.html#Gnocchi_romaine">Gnocchis à la romaine</a></li>
+                    <li><a href="Plat.html#Souffle_Fromage">Soufflé au Fromage</a></li>
+                    <li><a href="Plat.html#Poulet_citron_epices">Poulet citron et épices</a></li>
+                    <li><a href="Plat.html#Porc_Curry">Porc au Curry de mamie Laure</a></li>
+                  </ul></h3>
+                </div>
+
+                <div class="skill-block">
+                  <h2><a href="Dessert.html">Desserts</a></h2>
+                  <h3><ul>
+                    <li><a href="Dessert.html#Buche_Noel">Buche de Noel</a></li>
+                    <li><a href="Dessert.html#Canneles">Cannelés</a></li>
+                    <li><a href="Dessert.html#Cheesecake">Cheesecake</a></li>
+                    <li><a href="Dessert.html#Creme_Renversee">Crème Renversée</a></li>
+                    <li><a href="Dessert.html#Financiers">Financiers</a></li>
+                    <li><a href="Dessert.html#Flan_Michalak">Flan Michalak</a></li>
+                    <li><a href="Dessert.html#Gateau_Chocolat">Gateau au Chocolat</a></li>
+                    <li><a href="Dessert.html#Gateau_Noisettes">Gateau aux Noisettes</a></li>
+                    <li><a href="Dessert.html#Gateau_Yaourt">Gateau au Yaourt</a></li>
+                    <li><a href="Dessert.html#Mousse_Chocolat">Mousse au Chocolat</a></li>
+                    <li><a href="Dessert.html#Muffins">Muffins</a></li>
+                    <li><a href="Dessert.html#Tarte_Amandes">Tartes aux Amandes</a></li>
                   </ul></h3>
                 </div>
 
