--- a/Dessert.html
+++ b/Dessert.html
@@ -3,7 +3,7 @@
   <head>
 		<title>Recettes familiales
 		</title>
-		<meta name = "description" content="Trippin'">
+		<meta name = "description" content="Recettes'">
 		<meta charset = utf-8>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css">
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-      <h1><a class="header-title" href="index.html">Recettes familiales</h1></a>
+      <h1><a class="header-title" href="index.html">Recettes familiales - Desserts</h1></a>
     </header>
 
   <div class="card-sidebar navbar-icons">
@@ -25,21 +25,33 @@
          <div class="container">
               <div class="skills-list">
 
-                <div class="skill-block" >
-                  <h2 id="Buche_Noel">Buche de Noel</h2>
-                  <h3 ><ul>
-                    <li>4 oeufs (génoise)</li>
-                    <li>1 tasse à the de sucre en poudre ( à peu près 200g) (génoise)</li>
-                    <li>1 tasse à the de farine  ( à peu près 150g) (génoise)</li>
-                    <li>1 cuiller à cafe de levure chimique (génoise)</li>
-                    <li>1 tasse à the d’eau (génoise)</li>
-                    <li>375g de beurre de bonne qualité (Crème au beurre Moka)</li>
-                    <li>250g de sucre glace (Crème au beurre Moka)</li>
-                    <li>café: 75g moulu très fin infuse dans 125ml d’eau, (une peu plus..! ) filtrer (Crème au beurre Moka)</li>
-                    <li>6 jaunes d’œufs (Crème au beurre Moka)</li>
-                    <li>6 œufs (Mousse au chocolat)</li>
-                    <li>200g de chocolat (Mousse au chocolat)</li>
-                    <li>200g de chocolat (Glacage)</li>
+                <div class="skill-block" id="Buche_Noel">
+                  <h2 >Buche de Noel</h2>
+                  <h5>Génoise</h5>
+                  <h3><ul>
+                    <li>4 oeufs</li>
+                    <li>1 tasse à the de sucre en poudre ( à peu près 200g)</li>
+                    <li>1 tasse à the de farine  ( à peu près 150g)</li>
+                    <li>1 cuiller à cafe de levure chimique</li>
+                    <li>1 tasse à the d’eau</li>
+                  </ul></h3>
+                  <h5>Crème au beurre Moka</a></h5>
+                  <h3><ul>
+                    <li>375g de beurre de bonne qualité</li>
+                    <li>250g de sucre glace</li>
+                    <li>café: 75g moulu très fin infuse dans 125ml d’eau, (une peu plus..! ) filtrer</li>
+                    <li>6 jaunes d’œufs</li>
+                  </ul></h3>
+                  <h5>Mousse au chocolat</a></h5>
+                  <h3><ul>
+                    <li>6 œufs</li>
+                    <li>200g de chocolat</li>
+                  </ul></h3>
+                  <h5>Glaçage</a></h5>
+                  <h3><ul>
+                    <li>200g de chocolat</li>
+                    <li>Un peu de café</li>
+                    <li>Un peu de sucre glace</li>
                   </ul></h3>
                   <h4>Génoise: travailler ler les jaunes d’œuf  avec le sucre en poudre jusqu’à ce que le mélange blanchisse. Ajouter le sucre puis petit à petit la farine + levure et l’eau en alternance. Monter les blancs en neige et les ajouter. Faire cuire à feux doux 150  20/30mn et démouler sur un linge humide.</h4>
                   <h4>Crème au beurre Moka: travailler le beurre en pommade, incorporer le sucre glace, les jaunes d’œuf un à un et l’extrait de cafe. Mettre au gout</h4>
@@ -47,8 +59,8 @@
                   <h4>Glacage: 200g de chocolat,  faire fondre avec un peu de café, ajouter un peu de sucre glace. Etaler à chaud</h4>
                 </div>
 
-                <div class="skill-block" >
-                <h2 id="Canneles">Cannelés</h2>
+                <div class="skill-block" id="Canneles">
+                <h2 >Cannelés</h2>
                   <h3 ><ul>
                     <li>50cl lait</li>
                     <li>25g beurre</li>
@@ -66,27 +78,31 @@
                   <h4>1/3 doses.  23/24 petits canneles.    1/2 dose. 8 gros cannelés. À peu près…..</h4>
                 </div>
 
-                <div class="skill-block" >
-                <h2 id="Cheesecake">Cheesecake</h2>
-                  <h3 ><ul>
-                    <li>450g Saint Moret (Crème)</li>
-                    <li>250g de fromage blanc (Crème)</li>
-                    <li>100g de crème (Crème)</li>
-                    <li>Jus d'un citron (Crème)</li>
-                    <li>1 Cuillère de maizena (Crème)</li>
-                    <li>3 oeufs entiers (Crème)</li>
-                    <li>2 jaunes d'oeufs (Crème)</li>
-                    <li>150g de cassonade (Crème)</li>
-                    <li>200g de spéculos (Croute)</li>
-                    <li>150g de gateaux sablés (Croute)</li>
-                    <li>Un peu de beurre (Croute)</li>
+                <div class="skill-block" id="Cheesecake">
+                <h2 >Cheesecake</h2>
+                  <h5>Crème</h5>
+                  <h3><ul>
+                    <li>450g Saint Moret</li>
+                    <li>250g de fromage blanc</li>
+                    <li>100g de crème</li>
+                    <li>Jus d'un citron</li>
+                    <li>1 Cuillère de maizena</li>
+                    <li>3 oeufs entiers</li>
+                    <li>2 jaunes d'oeufs</li>
+                    <li>150g de cassonade</li>
+                  </ul></h3>
+                  <h5>Croute</a></h5>
+                  <h3><ul>
+                    <li>200g de spéculos</li>
+                    <li>150g de gateaux sablés</li>
+                    <li>Un peu de beurre</li>
                   </ul></h3>
                   <h4>Crème, tout mélanger</h4>
                   <h4>Faire cuire la croute 10 minutes, puis faire cuire 30 minutes avec la crème.</h4>
                 </div>
 
-                <div class="skill-block" >
-                <h2 id="Creme_Renversee">Crème Renversée</h2>
+                <div class="skill-block" id="Creme_Renversee">
+                <h2 >Crème Renversée</h2>
                   <h3 ><ul>
                     <li>1L de lait entier</li>
                     <li>6 oeufs</li>
@@ -99,8 +115,8 @@
                   <h4> Mettre du caramel dans le fond du moule , verser la préparation à travers une passoire. Faire prendre au bain marie au four, (30/40mn..) </h4>
                 </div>
 
-                <div class="skill-block" >
-                <h2 id="Financiers">Financiers</h2>
+                <div class="skill-block"  id="Financiers">
+                <h2>Financiers</h2>
                   <h3 ><ul>
                     <li>2 oeufs entiers</li>
                     <li>125g de sucre en poudre</li>
@@ -111,8 +127,8 @@
                   <h4>Four à 190°.  10/12 mn</h4>
                 </div>
 
-                <div class="skill-block" >
-                <h2 id="Flan_Michalak">Flan Parisien de Christophe Michalak (x8 - moule 23cm diamètre)</h2>
+                <div class="skill-block" id="Flan_Michalak">
+                <h2 >Flan Parisien de Christophe Michalak (x8 - moule 23cm diamètre)</h2><a href="https://cuisine.journaldesfemmes.fr/recette/1017650-flan-parisien-de-christophe-michalak">Recette originale ici</a>
                   <h3 ><ul>
                     <li>125g de sucre fin</li>
                     <li>50g de maizena</li>
@@ -129,8 +145,8 @@
                   <h4>Le flan n’est pas très épais (mon moule est grand) et c’est tant mieux, on n’a pas trop de scrupule à se resservir!</h4>
                 </div>
 
-                <div class="skill-block" >
-                <h2 id="Gateau_Chocolat">Gâteau au chocolat</h2>
+                <div class="skill-block" id="Gateau_Chocolat">
+                <h2 >Gâteau au chocolat</h2>
                   <h3 ><ul>
                     <li>200g de chocolat</li>
                     <li>200g de beurre</li>
@@ -144,8 +160,8 @@
                   <h4>Faire cuire 30 min au four à 180°.</h4>
                 </div>
 
-                <div class="skill-block" >
-                <h2 id="Gateau_Noisettes">Gâteau aux noisettes (x6)</h2>
+                <div class="skill-block" id="Gateau_Noisettes">
+                <h2 >Gâteau aux noisettes (x6)</h2>
                   <h3 ><ul>
                     <li>125g d'amandes en poudre</li>
                     <li>125 g de noisettes en poudre</li>
@@ -158,8 +174,8 @@
                   <h4>Une fois froid, glacer ce gâteau avec un mélange épais de sucre glace et de jus de citron.</h4>
                 </div>
 
-                <div class="skill-block" >
-                <h2 id="Gateau_Yaourt">Gâteau au Yaourt</h2>
+                <div class="skill-block" id="Gateau_Yaourt">
+                <h2 >Gâteau au Yaourt</h2>
                   <h3 ><ul>
                     <li>1 pot de Yaourt</li>
                     <li>3 oeufs entiers</li>
@@ -173,8 +189,8 @@
                   <h4>Tout mélanger dans l’ordre. et faire cuire 30/35 mn</h4>
                 </div>
 
-                <div class="skill-block" >
-                <h2 id="Mousse_Chocolat">Mousse au chocolat</h2>
+                <div class="skill-block" id="Mousse_Chocolat">
+                <h2 >Mousse au chocolat</h2>
                   <h3 ><ul>
                     <li>200g chocolat</li>
                     <li>6 oeufs</li>
@@ -185,8 +201,8 @@
                   <h4>Mettre au frigidaire au moins 2 heures</h4>
                 </div>
 
-                <div class="skill-block" >
-                <h2 id="Muffins">Muffins</h2>
+                <div class="skill-block" id="Muffins" >
+                <h2 >Muffins</h2>
                   <h3 ><ul>
                     <li>50g beurre salé</li>
                     <li>8 c.s. de crème</li>
@@ -202,8 +218,8 @@
                   <h4>Faire cuire au four 10/15 minutes</h4>
                 </div>
 
-                <div class="skill-block" >
-                <h2 id="Tarte_Amandes">Tarte aux Amandes Effilées</h2>
+                <div class="skill-block" id="Tarte_Amandes">
+                <h2 >Tarte aux Amandes Effilées</h2>
                   <h3 ><ul>
                     <li>Pâte à tarte</li>
                     <li>125g d'amandes effilées</li>
