--- a/Entree.html
+++ b/Entree.html
@@ -3,7 +3,7 @@
   <head>
 		<title>Recettes familiales
 		</title>
-		<meta name = "description" content="Trippin'">
+		<meta name = "description" content="Recettes'">
 		<meta charset = utf-8>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css">
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-      <h1><a class="header-title" href="index.html">Recettes familiales</h1></a>
+      <h1><a class="header-title" href="index.html">Recettes familiales - Entrées</h1></a>
     </header>
 
   <div class="card-sidebar navbar-icons">
@@ -25,8 +25,8 @@
        <div class="container">
               <div class="skills-list" >
 
-                <div class="skill-block">
-                  <h2 id="Couronne_Crabe" > Couronne au Crabe </h2>
+                <div class="skill-block" id="Couronne_Crabe" >
+                  <h2 > Couronne au Crabe </h2>
                   <h3 ><ul>
                     <li>500g de surimi</li>
                     <li>6 oeufs durs</li>
@@ -41,8 +41,8 @@
                   <h4>Voilà c’est hyper rapide, et ça jette! Ne pas mettre toute la gelée, cela fait trop, et la mayonnaise , selon ton goût aussi</h4>
                 </div>
 
-                <div class="skill-block" ></a>
-                  <h2 id="Foie_Gras_Micro_Onde">Foie Gras au micro-onde </h2>
+                <div class="skill-block" id="Foie_Gras_Micro_Onde></a>
+                  <h2 ">Foie Gras au micro-onde </h2>
                   <h3 ><ul>
                     <li>500g de foie</li>
                     <li>sel</li>
