--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 		<title>Recettes familiales
 		</title>
-		<meta name = "description" content="Trippin'">
+		<meta name = "description" content="Recettes'">
 		<meta charset = utf-8>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css">
@@ -14,7 +14,7 @@
     <div class="banner-index">
     <div class="container">
       <div class="bordure"></div>
-      <h1>Recettes Familiales: Font Réaulx & co</h1>
+      <h1>Recettes Familiales: Font Réaulx & Cie</h1>
       <div class="bordure"></div>
     </div>
   </div>
@@ -33,15 +33,15 @@
 
                 <div class="skill-block">
                   <h2><a href="Entree.html">Entrées</a></h2>
-                  <h3><ul>
+                  <h5><ul>
                     <li><a href="Entree.html#Couronne_Crabe">Couronne de Crabe</a></li>
                     <li><a href="Entree.html#Foie_Gras_Micro_Onde">Foie Gras au Micro-Onde</a></li>
-                  </ul></h3>
+                  </ul></h5>
                 </div>
 
                 <div class="skill-block">
                   <h2><a href="Plat.html">Plats</a></h2>
-                  <h3><ul>
+                  <h5><ul>
                     <li><a href="Plat.html#Blanquette_Veau">Blanquette de Veau</a></li>
                     <li><a href="Plat.html#Boeuf_Bourguignon">Boeuf Bourguignon</a></li>
                     <li><a href="Plat.html#Cakes_Salees">Cakes Salées</a></li>
@@ -52,12 +52,12 @@
                     <li><a href="Plat.html#Souffle_Fromage">Soufflé au Fromage</a></li>
                     <li><a href="Plat.html#Poulet_citron_epices">Poulet citron et épices</a></li>
                     <li><a href="Plat.html#Porc_Curry">Porc au Curry de mamie Laure</a></li>
-                  </ul></h3>
+                  </ul></h5>
                 </div>
 
                 <div class="skill-block">
                   <h2><a href="Dessert.html">Desserts</a></h2>
-                  <h3><ul>
+                  <h5><ul>
                     <li><a href="Dessert.html#Buche_Noel">Buche de Noel</a></li>
                     <li><a href="Dessert.html#Canneles">Cannelés</a></li>
                     <li><a href="Dessert.html#Cheesecake">Cheesecake</a></li>
@@ -70,8 +70,9 @@
                     <li><a href="Dessert.html#Mousse_Chocolat">Mousse au Chocolat</a></li>
                     <li><a href="Dessert.html#Muffins">Muffins</a></li>
                     <li><a href="Dessert.html#Tarte_Amandes">Tartes aux Amandes</a></li>
-                  </ul></h3>
+                  </ul></h5>
                 </div>
+
 
               </div>
 
