--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
        <div class="container_index">
               <div class="skills-list" >
-
+<!-- Ne pas modifier avant -->
                 <div class="skill-block">
                   <h2><a href="Entree.html">Entrées</a></h2>
                   <h5><ul>
